Name: elm-build-lib
Version: 0.0.2
Synopsis:       Elm compiler wrapper
Description:     Wrappers around the Elm binary to compile elm source strings into Javascript within Haskell
Homepage: http://github.com/JoeyEremondi/elm-build-lib

License: BSD3
License-file: LICENSE

name:           elm-build-lib
version:        0.0.2
cabal-version:  >=1.6
build-type:     Simple
author:         Joey Eremondi
Maintainer:     joey@eremondi.com
Copyright:      Copyright: (c) 2014 Joey Eremondi

Category: Compiler, Language

Extra-source-files: core/src/Array.elm
    ,core/src/Array.elm
    ,core/src/Basics.elm
    ,core/src/Bitwise.elm
    ,core/src/Char.elm
    ,core/src/Color.elm
    ,core/src/Date.elm
    ,core/src/Debug.elm
    ,core/src/Dict.elm
    ,core/src/Http.elm
    ,core/src/Keyboard.elm
    ,core/src/List.elm
    ,core/src/Maybe.elm
    ,core/src/Mouse.elm
    ,core/src/Random.elm
    ,core/src/Regex.elm
    ,core/src/Result.elm
    ,core/src/Set.elm
    ,core/src/Signal.elm
    ,core/src/String.elm
    ,core/src/Text.elm
    ,core/src/Time.elm
    ,core/src/Touch.elm
    ,core/src/Trampoline.elm
    ,core/src/Transform2D.elm
    ,core/src/WebSocket.elm
    ,core/src/Window.elm
     
    ,core/src/Json/Encode.elm
    ,core/src/Json/Decode.elm
     
    ,core/src/Graphics/Collage.elm
    ,core/src/Graphics/Element.elm
    ,core/src/Graphics/Input.elm
     
    ,core/src/Graphics/Input/Field.elm

source-repository head
  type: git
  location: git://github.com/JoeyEremondi/elm-build-lib



library
  exposed-modules: Language.Elm.Build
  other-modules: Language.Elm.CoreLibs
                 Language.Elm.BuildUtil
  hs-source-dirs:  src

  build-depends:   base >=4.2 && <5
                   , elm-compiler
                   , containers
                   , template-haskell
                   , file-embed
                   , bytestring
                   --, directory
                   --, process
                   --, temporary
                   --, text
  ghc-options:     -Wall

