Name: elm-build-lib
Version: 0.0.2
Synopsis:       Elm compiler wrapper
Description:     Wrappers around the Elm binary to compile elm source strings into Javascript within Haskell
Homepage: http://github.com/JoeyEremondi/elm-build-lib

License: BSD3
License-file: LICENSE

name:           elm-build-lib
version:        0.0.3
cabal-version:  >=1.6
build-type:     Simple
author:         Joey Eremondi
Maintainer:     joey@eremondi.com
Copyright:      Copyright: (c) 2014 Joey Eremondi

Category: Compiler, Language

Extra-source-files: core/src/*.elm
    
    ,core/src/Json/*.elm

    ,core/src/Graphics/*.elm
     
    ,core/src/Graphics/Input/*.elm

source-repository head
  type: git
  location: git://github.com/JoeyEremondi/elm-build-lib



library
  exposed-modules: Language.Elm.Build
  other-modules: Language.Elm.CoreLibs
                 Language.Elm.BuildUtil
  hs-source-dirs:  src

  build-depends:   base >=4.2 && <5
                   , elm-core-sources
                   , elm-compiler >= 0.14 && <0.15
                   , containers
                   , template-haskell
                   , file-embed
                   , bytestring
                   --, directory
                   --, process
                   --, temporary
                   --, text
  ghc-options:     -Wall

